@@ -10,13 +10,13 @@ Easier:
 - Fix Daniel's suggestions.
 - Added ilSetError error codes to il_files.c.
 - Get rid of check for precache.
+- If IL_NO_JP2 is defined, lines 306-307 shouldn't just cause the entire thing to fail.  We should just skip that entry.
 
 
 More involved:
 - Commenting out lines 729-731 in pngread.c of libpng (1.2.9?) will allow reading of certain malformed Vista PNG-compressed .ico files with extra data at the end of the stream.  An example can be found in test/in and was created using Microangelo.
 - Add .ico/.icns saving.
 - Add .exr saving.
-- Add .jp2 saving.
 - Readd CMAKE support
 - Better static lib support in MSVC++ 8/9
 - Lib EXIF support
