@@ -2,7 +2,7 @@
 //
 // ImageLib Sources
 // Copyright (C) 2000-2009 by Denton Woods
-// Last modified: 01/05/2009
+// Last modified: 01/19/2009
 //
 // Filename: src-IL/src/il_nvidia.cpp
 //
