@@ -107,11 +107,18 @@
 	* il_dds-save.c: Added line 688.
 	* il_states.c: Added lines for libsquish support.
 	* il_dds-save.c (Compress): Added libsquish compression.
-	* il_io.c (ilDetermineTypeF/L and ilIsValid/F/L): Added VTF and SUN.
+	* il_io.c (ilDetermineTypeF/L and ilIsValid/F/L): Added VTF, SUN and EXR.
 	* il_io.c (ilIsValidF/L): Added TIF
-	* il_jp2.c:131-137:Added these lines to take care of erroneous error generated
-	by JasPer's buffering.
+	* il_jp2.c:131-137:Added these lines to take care of erroneous error generated by JasPer's buffering.
 	* il_jp2.c: Added functions to save JPEG 2000 images.
 	* il_utility.c (ilGetBppFormat): Added IL_ALPHA.
 	* il_jp2.c (iLoadJp2Internal): Added 1 and 2 channel format loading.
+	* il_dds-save.c:700-701: Changed to IL_RGBA.
+	* il_dds-save.c (ChooseEndpoints): Changed to use norm squared instead of a sum of the components.
+	* il_dds-save.c (GetBlock): Changed to copy adjacent data if it goes beyond the bounds of the image.
+	* il_icon.c: Removed extra whitespace.
+	* il_icns.c / il_internal.h: Added ilIsValidIcns*.
+	* il_icns.h: Changed comments on ICNSDATA.
+	* il_exr.c: Added ilIsValidExr*.
+	* il_io.c (ilLoadF): Uncommented ilLoadJp2F.
 	
